2012-03-30 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: update util::readString to only designate unquoted
	empty strings as null, quoted empty strings are intentional and
	therefore valid strings
	* tests/Makefile.am: the dollar signs in the input to w7 requires
	escape for the program make

2012-03-29 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: introduce % into the categorical values of w7
	in order to reproduce the test case from Dominique, add test case
	16 and 17 to work with the new data
	* src/dictionary.cpp: on line 428 change to "code < raw_.size()",
	on line 543, return raw_.size() (remove "+1")

2012-03-28 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: extend the data in w7 to include null values
	and empty strings
	* src/part.cpp: take into account of null mask when working with
	strings
	* src/index.h, src/index.cpp: move sumBins to be public, add a new
	version to work with a list of bin numbers, allow addBits to
	initialize the results to an empty bitvector
	* src/category.cpp: change category::patternSearch to use the new
	index::sumBins, previous version neglected to activate bitmaps and
	therefore may lead to incorrect answers
	* src/whereLexer.ll, src/whereParser.yy: accept "colname NOT NULL"
	* src/column.cpp, src/part.cpp: add IBIS_BLOCK_GUARD, handle
	"colname NOT NULL" as a special case of ibis::qContinuousRange
	that matches all valid entries
	* tests/Makefile.am: add test case for "colname NOT NULL"
	* tests/maurel.csv: shorten the column names, introduce a few null
	values in columns i and q

2012-03-28 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* src/qExpr.cpp: restore backslash as escape character

2012-03-28 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp, src/util.cpp: add macro
	FASTBIT_EMPTY_STRING_AS_NULL per request of Dominique Prunier

2012-03-27 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: in function backup wrap all values into auto_ptr